#147898861: My Archived Events: button misalignment: fix

--- a/themes/connectmasstapp/css/styles.css
+++ b/themes/connectmasstapp/css/styles.css
@@ -180,7 +180,7 @@
 /* line 85, ../sass/components/_misc.scss */
 .my-archived-events .views-row .button a {
   display: inline-block;
-  width: 94px;
+  width: 97px;
   color: #ffffff;
   letter-spacing: 0.5px;
   text-shadow: 1px 1px 1px #300033;
