--- a/themes/connectmasstapp/sass/components/_misc.scss
+++ b/themes/connectmasstapp/sass/components/_misc.scss
@@ -84,7 +84,7 @@
     .button {
       a {
         display: inline-block;
-        width: 94px; 
+        width: 97px; 
         color: #ffffff;
         letter-spacing: 0.5px;
         text-shadow: 1px 1px 1px #300033;
