--- a/themes/connectmasstapp/sass/screen.scss
+++ b/themes/connectmasstapp/sass/screen.scss
@@ -2429,6 +2429,11 @@ span.bar {
 .event-time span {
   font-size: 14px;
 }
+
+.event-time > span.date-display-single {
+  display: block;
+}
+
 .event-title a {
   font-size: 18px;
   /*line-height: 17px;*/
